# davis-weather-mqtt-gateway

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: mqtt_client.py  reader_vantagepro2.py  view.py
